Script/target to produce statement counts

--- a/run_assembly/Makefile
+++ b/run_assembly/Makefile
@@ -1,7 +1,7 @@
 OUTPUT := output
 DATA := data
 
-all: $(OUTPUT)/bioexp_preassembled.pkl
+all: $(OUTPUT)/bioexp_preassembled.pkl $(OUTPUT)/fig2_stmt_counts.txt
 
 clean:
 	cd $(OUTPUT); rm -rf *
@@ -82,6 +82,24 @@ $(OUTPUT)/bioexp_preassembled.pkl: \
         $(OUTPUT)/bioexp_map_sequence.pkl
 	python -u assemble_sources.py run_preassembly
 
+# -- ANALYSIS/STATISTICS -----------------------------------------------------
+
+$(OUTPUT)/fig2_stmt_counts.txt: \
+        $(OUTPUT)/bioexp_reach.pkl \
+        $(OUTPUT)/bioexp_sparser.pkl \
+        $(OUTPUT)/bioexp_bel.pkl \
+        $(OUTPUT)/bioexp_fixed.pkl \
+        $(OUTPUT)/bioexp_all_raw.pkl \
+        $(OUTPUT)/bioexp_filter_no_hypothesis.pkl \
+        $(OUTPUT)/bioexp_map_grounding.pkl \
+        $(OUTPUT)/bioexp_filter_grounded_only.pkl \
+        $(OUTPUT)/bioexp_filter_genes_only.pkl \
+        $(OUTPUT)/bioexp_filter_human_only.pkl \
+        $(OUTPUT)/bioexp_expand_families.pkl \
+        $(OUTPUT)/bioexp_filter_gene_list.pkl \
+        $(OUTPUT)/bioexp_map_sequence.pkl \
+        $(OUTPUT)/bioexp_preassembled.pkl
+	python -u stmt_counts.py
 
 
 
