More general assembly Makefile

--- a/run_assembly/Makefile
+++ b/run_assembly/Makefile
@@ -34,7 +34,7 @@ $(OUTPUT)/bioexp_bel.pkl: \
 $(OUTPUT)/bioexp_signor.pkl:
 	python -u assemble_sources.py signor
 
-# ASSEMBLY ------------------------------------------------------------------
+# FULL ASSEMBLY PIPELINE (includes DBs) ---------------------------------------
 
 # Load the statements
 $(OUTPUT)/bioexp_all_raw.pkl: \
@@ -45,84 +45,86 @@ $(OUTPUT)/bioexp_all_raw.pkl: \
         $(DATA)/bioexp_sparser.pkl
 	python -u assemble_sources.py load_stmts
 
-# Sample subset (for testing--FIXME)
-#$(OUTPUT)/bioexp_all_raw_sample.pkl: $(OUTPUT)/bioexp_all_raw.pkl
-#	python -u assemble_sources.py sample
+# Filter no hypotheses
+#$(OUTPUT)/bioexp_filter_no_hypothesis.pkl: $(OUTPUT)/bioexp_all_raw.pkl
+#	python -u assemble_sources.py filter_no_hypothesis \
+#        all_raw filter_no_hypothesis
 
 # Filter no hypotheses
-$(OUTPUT)/bioexp_filter_no_hypothesis.pkl: $(OUTPUT)/bioexp_all_raw.pkl
-	python -u assemble_sources.py filter_no_hypothesis
+$(OUTPUT)/bioexp_filter_no_hypothesis.pkl: $(OUTPUT)/bioexp_sample.pkl
+	python -u assemble_sources.py filter_no_hypothesis \
+        sample filter_no_hypothesis
 
 # Map grounding
-$(OUTPUT)/bioexp_map_grounding.pkl: \
-        $(OUTPUT)/bioexp_filter_no_hypothesis.pkl
-	python -u assemble_sources.py map_grounding
+$(OUTPUT)/bioexp_map_grounding.pkl: $(OUTPUT)/bioexp_filter_no_hypothesis.pkl
+	python -u assemble_sources.py map_grounding \
+        filter_no_hypothesis map_grounding
 
 # Filter grounded only
-$(OUTPUT)/bioexp_filter_grounded_only.pkl: \
-        $(OUTPUT)/bioexp_map_grounding.pkl
-	python -u assemble_sources.py filter_grounded_only
+$(OUTPUT)/bioexp_filter_grounded_only.pkl: $(OUTPUT)/bioexp_map_grounding.pkl
+	python -u assemble_sources.py filter_grounded_only \
+        map_grounding filter_grounded_only
 
 # Filter genes only
 $(OUTPUT)/bioexp_filter_genes_only.pkl: \
         $(OUTPUT)/bioexp_filter_grounded_only.pkl
-	python -u assemble_sources.py filter_genes_only
+	python -u assemble_sources.py filter_genes_only \
+        filter_grounded_only filter_genes_only
 
 # Filter human only
-$(OUTPUT)/bioexp_filter_human_only.pkl: \
-        $(OUTPUT)/bioexp_filter_genes_only.pkl
-	python -u assemble_sources.py filter_human_only
+$(OUTPUT)/bioexp_filter_human_only.pkl: $(OUTPUT)/bioexp_filter_genes_only.pkl
+	python -u assemble_sources.py filter_human_only \
+        filter_genes_only filter_human_only
 
 # Expand families
-$(OUTPUT)/bioexp_expand_families.pkl: \
-        $(OUTPUT)/bioexp_filter_human_only.pkl
-	python -u assemble_sources.py expand_families
+$(OUTPUT)/bioexp_expand_families.pkl: $(OUTPUT)/bioexp_filter_human_only.pkl
+	python -u assemble_sources.py expand_families \
+        filter_human_only expand_families
 
 # Filter to gene list
 $(OUTPUT)/bioexp_filter_gene_list.pkl: \
         $(OUTPUT)/bioexp_expand_families.pkl \
         ../build/prior_genes.txt
-	python -u assemble_sources.py filter_gene_list
+	python -u assemble_sources.py filter_gene_list \
+        expand_families filter_gene_list
 
 # Map sequences
-$(OUTPUT)/bioexp_map_sequence.pkl: \
-        $(OUTPUT)/bioexp_filter_gene_list.pkl
-	python -u assemble_sources.py map_sequence
+$(OUTPUT)/bioexp_map_sequence.pkl: $(OUTPUT)/bioexp_filter_gene_list.pkl
+	python -u assemble_sources.py map_sequence filter_gene_list map_sequence
 
 # Run preassembly
-$(OUTPUT)/bioexp_preassembled.pkl: \
-        $(OUTPUT)/bioexp_map_sequence.pkl
-	python -u assemble_sources.py preassembled
+$(OUTPUT)/bioexp_preassembled.pkl: $(OUTPUT)/bioexp_map_sequence.pkl
+	python -u assemble_sources.py preassembled map_sequence preassembled
 
 # Filter out high belief statements
-$(OUTPUT)/bioexp_filter_belief.pkl: \
-        $(OUTPUT)/bioexp_preassembled.pkl
-	python -u assemble_sources.py filter_belief
+$(OUTPUT)/bioexp_filter_belief.pkl: $(OUTPUT)/bioexp_preassembled.pkl
+	python -u assemble_sources.py filter_belief preassembled filter_belief
 
 # Filter out all stmts except top-level
-$(OUTPUT)/bioexp_filter_top_level.pkl: \
-        $(OUTPUT)/bioexp_filter_belief.pkl
-	python -u assemble_sources.py filter_top_level
+$(OUTPUT)/bioexp_filter_top_level.pkl: $(OUTPUT)/bioexp_filter_belief.pkl
+	python -u assemble_sources.py filter_top_level \
+        filter_belief filter_top_level
 
 # Filter phosphorylations to stmts with known kinases as enzymes
-$(OUTPUT)/bioexp_filter_enzyme_kinase.pkl: \
-        $(OUTPUT)/bioexp_filter_top_level.pkl
-	python -u assemble_sources.py filter_enzyme_kinase
+$(OUTPUT)/bioexp_filter_enzyme_kinase.pkl: $(OUTPUT)/bioexp_filter_top_level.pkl
+	python -u assemble_sources.py filter_enzyme_kinase \
+        filter_top_level filter_enzyme_kinase
 
 # Filter out non-phos mods with kinases as enzymes
 $(OUTPUT)/bioexp_filter_mod_nokinase.pkl: \
         $(OUTPUT)/bioexp_filter_enzyme_kinase.pkl
-	python -u assemble_sources.py filter_mod_nokinase
+	python -u assemble_sources.py filter_mod_nokinase \
+        filter_enzyme_kinase filter_mod_nokinase
 
 # Infer out redundant activities
-$(OUTPUT)/bioexp_reduce_activities.pkl: \
-        $(OUTPUT)/bioexp_filter_mod_nokinase.pkl
-	python -u assemble_sources.py reduce_activities
+$(OUTPUT)/bioexp_reduce_activities.pkl: $(OUTPUT)/bioexp_filter_mod_nokinase.pkl
+	python -u assemble_sources.py reduce_activities \
+        filter_mod_nokinase reduce_activities
 
 # Infer out redundant mods
-$(OUTPUT)/bioexp_reduce_mods.pkl: \
-        $(OUTPUT)/bioexp_reduce_activities.pkl
-	python -u assemble_sources.py reduce_mods
+$(OUTPUT)/bioexp_reduce_mods.pkl: $(OUTPUT)/bioexp_reduce_activities.pkl
+	python -u assemble_sources.py reduce_mods \
+        reduce_activities reduce_mods
 
 
 # -- ANALYSIS/STATISTICS -----------------------------------------------------
@@ -151,5 +153,7 @@ $(OUTPUT)/fig2_stmt_counts.txt: \
         $(OUTPUT)/bioexp_reduce_mods.pkl
 	python -u stmt_counts.py
 
+
+# READING-ONLY ASSEMBLY PIPELINE (for evaluation) ----------------------------
 
 
