Fix reader only makefile targets

--- a/run_assembly/Makefile
+++ b/run_assembly/Makefile
@@ -289,7 +289,8 @@ $(OUTPUT)/bioexp_reading_only_reduce_mods.pkl: \
 # REACH only
 $(OUTPUT)/bioexp_reach_only.pkl: \
         $(OUTPUT)/bioexp_reading_only_map_sequence.pkl
-	python -u assemble_sources.py filter_source reach reach_only
+	python -u assemble_sources.py filter_source reading_only_map_sequence \
+        reach reach_only
 
 $(OUTPUT)/bioexp_reach_only_preassembled.pkl: \
         $(OUTPUT)/bioexp_reach_only.pkl
@@ -299,7 +300,8 @@ $(OUTPUT)/bioexp_reach_only_preassembled.pkl: \
 # MEDSCAN only
 $(OUTPUT)/bioexp_medscan_only.pkl: \
         $(OUTPUT)/bioexp_reading_only_map_sequence.pkl
-	python -u assemble_sources.py filter_source medscan medscan_only
+	python -u assemble_sources.py filter_source reading_only_map_sequence \
+        medscan medscan_only
 
 $(OUTPUT)/bioexp_medscan_only_preassembled.pkl: \
         $(OUTPUT)/bioexp_medscan_only.pkl
@@ -309,7 +311,8 @@ $(OUTPUT)/bioexp_medscan_only_preassembled.pkl: \
 # SPARSER only
 $(OUTPUT)/bioexp_sparser_only.pkl: \
         $(OUTPUT)/bioexp_reading_only_map_sequence.pkl
-	python -u assemble_sources.py filter_source sparser sparser_only
+	python -u assemble_sources.py filter_source reading_only_map_sequence \
+        sparser sparser_only
 
 $(OUTPUT)/bioexp_sparser_only_preassembled.pkl: \
         $(OUTPUT)/bioexp_sparser_only.pkl
